Simplifying Configuration file